[package]
name = "ttl_cache"
version = "0.5.1"
authors = ["Stu Small <stuart.alan.small@gmail.com>"]
description = "A cache that will expire values after a TTL"
repository = "https://github.com/stusmall/ttl_cache"
documentation = "https://docs.rs/ttl_cache/"
keywords = ["cache","ttl","expire"]
license = "MIT/Apache-2.0"

[dependencies]
linked-hash-map = "0.5"


[features]
default = []
stats = []
